@@ -6,7 +6,7 @@ grub_script.tab.c grub_script.tab.h: normal/parser.y
 DISTCLEANFILES += grub_script.tab.c grub_script.tab.h
 
 # For grub-emu.
-grub_modules_init.lst: geninit.sh $(MODSRCFILES)
+grub_modules_init.lst: geninit.sh $(filter-out grub_emu_init.c,$(grub_emu_SOURCES))
 	rm -f $@; grep GRUB_MOD_INIT $(filter %.c,$^) /dev/null > $@
 DISTCLEANFILES += grub_modules_init.lst
 
@@ -30,7 +30,6 @@ CLEANFILES += fshelp.mod mod-fshelp.o mod-fshelp.c pre-fshelp.o fshelp_mod-fs_fs
 ifneq ($(fshelp_mod_EXPORTS),no)
 CLEANFILES += def-fshelp.lst
 DEFSYMFILES += def-fshelp.lst
-MODSRCFILES += fs/fshelp.c
 endif
 MOSTLYCLEANFILES += fshelp_mod-fs_fshelp.d
 UNDSYMFILES += und-fshelp.lst
@@ -87,7 +86,6 @@ CLEANFILES += fat.mod mod-fat.o mod-fat.c pre-fat.o fat_mod-fs_fat.o und-fat.lst
 ifneq ($(fat_mod_EXPORTS),no)
 CLEANFILES += def-fat.lst
 DEFSYMFILES += def-fat.lst
-MODSRCFILES += fs/fat.c
 endif
 MOSTLYCLEANFILES += fat_mod-fs_fat.d
 UNDSYMFILES += und-fat.lst
@@ -144,7 +142,6 @@ CLEANFILES += ufs.mod mod-ufs.o mod-ufs.c pre-ufs.o ufs_mod-fs_ufs.o und-ufs.lst
 ifneq ($(ufs_mod_EXPORTS),no)
 CLEANFILES += def-ufs.lst
 DEFSYMFILES += def-ufs.lst
-MODSRCFILES += fs/ufs.c
 endif
 MOSTLYCLEANFILES += ufs_mod-fs_ufs.d
 UNDSYMFILES += und-ufs.lst
@@ -201,7 +198,6 @@ CLEANFILES += ext2.mod mod-ext2.o mod-ext2.c pre-ext2.o ext2_mod-fs_ext2.o und-e
 ifneq ($(ext2_mod_EXPORTS),no)
 CLEANFILES += def-ext2.lst
 DEFSYMFILES += def-ext2.lst
-MODSRCFILES += fs/ext2.c
 endif
 MOSTLYCLEANFILES += ext2_mod-fs_ext2.d
 UNDSYMFILES += und-ext2.lst
@@ -258,7 +254,6 @@ CLEANFILES += minix.mod mod-minix.o mod-minix.c pre-minix.o minix_mod-fs_minix.o
 ifneq ($(minix_mod_EXPORTS),no)
 CLEANFILES += def-minix.lst
 DEFSYMFILES += def-minix.lst
-MODSRCFILES += fs/minix.c
 endif
 MOSTLYCLEANFILES += minix_mod-fs_minix.d
 UNDSYMFILES += und-minix.lst
@@ -315,7 +310,6 @@ CLEANFILES += hfs.mod mod-hfs.o mod-hfs.c pre-hfs.o hfs_mod-fs_hfs.o und-hfs.lst
 ifneq ($(hfs_mod_EXPORTS),no)
 CLEANFILES += def-hfs.lst
 DEFSYMFILES += def-hfs.lst
-MODSRCFILES += fs/hfs.c
 endif
 MOSTLYCLEANFILES += hfs_mod-fs_hfs.d
 UNDSYMFILES += und-hfs.lst
@@ -372,7 +366,6 @@ CLEANFILES += jfs.mod mod-jfs.o mod-jfs.c pre-jfs.o jfs_mod-fs_jfs.o und-jfs.lst
 ifneq ($(jfs_mod_EXPORTS),no)
 CLEANFILES += def-jfs.lst
 DEFSYMFILES += def-jfs.lst
-MODSRCFILES += fs/jfs.c
 endif
 MOSTLYCLEANFILES += jfs_mod-fs_jfs.d
 UNDSYMFILES += und-jfs.lst
@@ -429,7 +422,6 @@ CLEANFILES += iso9660.mod mod-iso9660.o mod-iso9660.c pre-iso9660.o iso9660_mod-
 ifneq ($(iso9660_mod_EXPORTS),no)
 CLEANFILES += def-iso9660.lst
 DEFSYMFILES += def-iso9660.lst
-MODSRCFILES += fs/iso9660.c
 endif
 MOSTLYCLEANFILES += iso9660_mod-fs_iso9660.d
 UNDSYMFILES += und-iso9660.lst
@@ -486,7 +478,6 @@ CLEANFILES += xfs.mod mod-xfs.o mod-xfs.c pre-xfs.o xfs_mod-fs_xfs.o und-xfs.lst
 ifneq ($(xfs_mod_EXPORTS),no)
 CLEANFILES += def-xfs.lst
 DEFSYMFILES += def-xfs.lst
-MODSRCFILES += fs/xfs.c
 endif
 MOSTLYCLEANFILES += xfs_mod-fs_xfs.d
 UNDSYMFILES += und-xfs.lst
@@ -543,7 +534,6 @@ CLEANFILES += affs.mod mod-affs.o mod-affs.c pre-affs.o affs_mod-fs_affs.o und-a
 ifneq ($(affs_mod_EXPORTS),no)
 CLEANFILES += def-affs.lst
 DEFSYMFILES += def-affs.lst
-MODSRCFILES += fs/affs.c
 endif
 MOSTLYCLEANFILES += affs_mod-fs_affs.d
 UNDSYMFILES += und-affs.lst
@@ -600,7 +590,6 @@ CLEANFILES += sfs.mod mod-sfs.o mod-sfs.c pre-sfs.o sfs_mod-fs_sfs.o und-sfs.lst
 ifneq ($(sfs_mod_EXPORTS),no)
 CLEANFILES += def-sfs.lst
 DEFSYMFILES += def-sfs.lst
-MODSRCFILES += fs/sfs.c
 endif
 MOSTLYCLEANFILES += sfs_mod-fs_sfs.d
 UNDSYMFILES += und-sfs.lst
@@ -657,7 +646,6 @@ CLEANFILES += hfsplus.mod mod-hfsplus.o mod-hfsplus.c pre-hfsplus.o hfsplus_mod-
 ifneq ($(hfsplus_mod_EXPORTS),no)
 CLEANFILES += def-hfsplus.lst
 DEFSYMFILES += def-hfsplus.lst
-MODSRCFILES += fs/hfsplus.c
 endif
 MOSTLYCLEANFILES += hfsplus_mod-fs_hfsplus.d
 UNDSYMFILES += und-hfsplus.lst
@@ -717,7 +705,6 @@ CLEANFILES += amiga.mod mod-amiga.o mod-amiga.c pre-amiga.o amiga_mod-partmap_am
 ifneq ($(amiga_mod_EXPORTS),no)
 CLEANFILES += def-amiga.lst
 DEFSYMFILES += def-amiga.lst
-MODSRCFILES += partmap/amiga.c
 endif
 MOSTLYCLEANFILES += amiga_mod-partmap_amiga.d
 UNDSYMFILES += und-amiga.lst
@@ -774,7 +761,6 @@ CLEANFILES += apple.mod mod-apple.o mod-apple.c pre-apple.o apple_mod-partmap_ap
 ifneq ($(apple_mod_EXPORTS),no)
 CLEANFILES += def-apple.lst
 DEFSYMFILES += def-apple.lst
-MODSRCFILES += partmap/apple.c
 endif
 MOSTLYCLEANFILES += apple_mod-partmap_apple.d
 UNDSYMFILES += und-apple.lst
@@ -831,7 +817,6 @@ CLEANFILES += pc.mod mod-pc.o mod-pc.c pre-pc.o pc_mod-partmap_pc.o und-pc.lst
 ifneq ($(pc_mod_EXPORTS),no)
 CLEANFILES += def-pc.lst
 DEFSYMFILES += def-pc.lst
-MODSRCFILES += partmap/pc.c
 endif
 MOSTLYCLEANFILES += pc_mod-partmap_pc.d
 UNDSYMFILES += und-pc.lst
@@ -888,7 +873,6 @@ CLEANFILES += sun.mod mod-sun.o mod-sun.c pre-sun.o sun_mod-partmap_sun.o und-su
 ifneq ($(sun_mod_EXPORTS),no)
 CLEANFILES += def-sun.lst
 DEFSYMFILES += def-sun.lst
-MODSRCFILES += partmap/sun.c
 endif
 MOSTLYCLEANFILES += sun_mod-partmap_sun.d
 UNDSYMFILES += und-sun.lst
@@ -945,7 +929,6 @@ CLEANFILES += acorn.mod mod-acorn.o mod-acorn.c pre-acorn.o acorn_mod-partmap_ac
 ifneq ($(acorn_mod_EXPORTS),no)
 CLEANFILES += def-acorn.lst
 DEFSYMFILES += def-acorn.lst
-MODSRCFILES += partmap/acorn.c
 endif
 MOSTLYCLEANFILES += acorn_mod-partmap_acorn.d
 UNDSYMFILES += und-acorn.lst
@@ -1002,7 +985,6 @@ CLEANFILES += gpt.mod mod-gpt.o mod-gpt.c pre-gpt.o gpt_mod-partmap_gpt.o und-gp
 ifneq ($(gpt_mod_EXPORTS),no)
 CLEANFILES += def-gpt.lst
 DEFSYMFILES += def-gpt.lst
-MODSRCFILES += partmap/gpt.c
 endif
 MOSTLYCLEANFILES += gpt_mod-partmap_gpt.d
 UNDSYMFILES += und-gpt.lst
@@ -1066,7 +1048,6 @@ CLEANFILES += hello.mod mod-hello.o mod-hello.c pre-hello.o hello_mod-hello_hell
 ifneq ($(hello_mod_EXPORTS),no)
 CLEANFILES += def-hello.lst
 DEFSYMFILES += def-hello.lst
-MODSRCFILES += hello/hello.c
 endif
 MOSTLYCLEANFILES += hello_mod-hello_hello.d
 UNDSYMFILES += und-hello.lst
@@ -1123,7 +1104,6 @@ CLEANFILES += boot.mod mod-boot.o mod-boot.c pre-boot.o boot_mod-commands_boot.o
 ifneq ($(boot_mod_EXPORTS),no)
 CLEANFILES += def-boot.lst
 DEFSYMFILES += def-boot.lst
-MODSRCFILES += commands/boot.c
 endif
 MOSTLYCLEANFILES += boot_mod-commands_boot.d
 UNDSYMFILES += und-boot.lst
@@ -1180,7 +1160,6 @@ CLEANFILES += terminal.mod mod-terminal.o mod-terminal.c pre-terminal.o terminal
 ifneq ($(terminal_mod_EXPORTS),no)
 CLEANFILES += def-terminal.lst
 DEFSYMFILES += def-terminal.lst
-MODSRCFILES += commands/terminal.c
 endif
 MOSTLYCLEANFILES += terminal_mod-commands_terminal.d
 UNDSYMFILES += und-terminal.lst
@@ -1237,7 +1216,6 @@ CLEANFILES += ls.mod mod-ls.o mod-ls.c pre-ls.o ls_mod-commands_ls.o und-ls.lst
 ifneq ($(ls_mod_EXPORTS),no)
 CLEANFILES += def-ls.lst
 DEFSYMFILES += def-ls.lst
-MODSRCFILES += commands/ls.c
 endif
 MOSTLYCLEANFILES += ls_mod-commands_ls.d
 UNDSYMFILES += und-ls.lst
@@ -1294,7 +1272,6 @@ CLEANFILES += cmp.mod mod-cmp.o mod-cmp.c pre-cmp.o cmp_mod-commands_cmp.o und-c
 ifneq ($(cmp_mod_EXPORTS),no)
 CLEANFILES += def-cmp.lst
 DEFSYMFILES += def-cmp.lst
-MODSRCFILES += commands/cmp.c
 endif
 MOSTLYCLEANFILES += cmp_mod-commands_cmp.d
 UNDSYMFILES += und-cmp.lst
@@ -1351,7 +1328,6 @@ CLEANFILES += cat.mod mod-cat.o mod-cat.c pre-cat.o cat_mod-commands_cat.o und-c
 ifneq ($(cat_mod_EXPORTS),no)
 CLEANFILES += def-cat.lst
 DEFSYMFILES += def-cat.lst
-MODSRCFILES += commands/cat.c
 endif
 MOSTLYCLEANFILES += cat_mod-commands_cat.d
 UNDSYMFILES += und-cat.lst
@@ -1408,7 +1384,6 @@ CLEANFILES += help.mod mod-help.o mod-help.c pre-help.o help_mod-commands_help.o
 ifneq ($(help_mod_EXPORTS),no)
 CLEANFILES += def-help.lst
 DEFSYMFILES += def-help.lst
-MODSRCFILES += commands/help.c
 endif
 MOSTLYCLEANFILES += help_mod-commands_help.d
 UNDSYMFILES += und-help.lst
@@ -1465,7 +1440,6 @@ CLEANFILES += font.mod mod-font.o mod-font.c pre-font.o font_mod-font_manager.o 
 ifneq ($(font_mod_EXPORTS),no)
 CLEANFILES += def-font.lst
 DEFSYMFILES += def-font.lst
-MODSRCFILES += font/manager.c
 endif
 MOSTLYCLEANFILES += font_mod-font_manager.d
 UNDSYMFILES += und-font.lst
@@ -1522,7 +1496,6 @@ CLEANFILES += search.mod mod-search.o mod-search.c pre-search.o search_mod-comma
 ifneq ($(search_mod_EXPORTS),no)
 CLEANFILES += def-search.lst
 DEFSYMFILES += def-search.lst
-MODSRCFILES += commands/search.c
 endif
 MOSTLYCLEANFILES += search_mod-commands_search.d
 UNDSYMFILES += und-search.lst
@@ -1579,7 +1552,6 @@ CLEANFILES += test.mod mod-test.o mod-test.c pre-test.o test_mod-commands_test.o
 ifneq ($(test_mod_EXPORTS),no)
 CLEANFILES += def-test.lst
 DEFSYMFILES += def-test.lst
-MODSRCFILES += commands/test.c
 endif
 MOSTLYCLEANFILES += test_mod-commands_test.d
 UNDSYMFILES += und-test.lst
@@ -1636,7 +1608,6 @@ CLEANFILES += loopback.mod mod-loopback.o mod-loopback.c pre-loopback.o loopback
 ifneq ($(loopback_mod_EXPORTS),no)
 CLEANFILES += def-loopback.lst
 DEFSYMFILES += def-loopback.lst
-MODSRCFILES += disk/loopback.c
 endif
 MOSTLYCLEANFILES += loopback_mod-disk_loopback.d
 UNDSYMFILES += und-loopback.lst
@@ -1693,7 +1664,6 @@ CLEANFILES += configfile.mod mod-configfile.o mod-configfile.c pre-configfile.o 
 ifneq ($(configfile_mod_EXPORTS),no)
 CLEANFILES += def-configfile.lst
 DEFSYMFILES += def-configfile.lst
-MODSRCFILES += commands/configfile.c
 endif
 MOSTLYCLEANFILES += configfile_mod-commands_configfile.d
 UNDSYMFILES += und-configfile.lst
@@ -1750,7 +1720,6 @@ CLEANFILES += terminfo.mod mod-terminfo.o mod-terminfo.c pre-terminfo.o terminfo
 ifneq ($(terminfo_mod_EXPORTS),no)
 CLEANFILES += def-terminfo.lst
 DEFSYMFILES += def-terminfo.lst
-MODSRCFILES += term/terminfo.c term/tparm.c
 endif
 MOSTLYCLEANFILES += terminfo_mod-term_terminfo.d terminfo_mod-term_tparm.d
 UNDSYMFILES += und-terminfo.lst
@@ -1826,7 +1795,6 @@ CLEANFILES += blocklist.mod mod-blocklist.o mod-blocklist.c pre-blocklist.o bloc
 ifneq ($(blocklist_mod_EXPORTS),no)
 CLEANFILES += def-blocklist.lst
 DEFSYMFILES += def-blocklist.lst
-MODSRCFILES += commands/blocklist.c
 endif
 MOSTLYCLEANFILES += blocklist_mod-commands_blocklist.d
 UNDSYMFILES += und-blocklist.lst
@@ -1886,7 +1854,6 @@ CLEANFILES += gzio.mod mod-gzio.o mod-gzio.c pre-gzio.o gzio_mod-io_gzio.o und-g
 ifneq ($(gzio_mod_EXPORTS),no)
 CLEANFILES += def-gzio.lst
 DEFSYMFILES += def-gzio.lst
-MODSRCFILES += io/gzio.c
 endif
 MOSTLYCLEANFILES += gzio_mod-io_gzio.d
 UNDSYMFILES += und-gzio.lst
